# AutoprojectUUTE

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  project.txt  Что внутри Модуль 1 (парсинг ТУ).txt  Что внутри Схема БД.txt  Что внутри Ядро модуля.txt
.cursor/: config.json
.cursor/agents/: debugger.md  documenter.md  security-auditor.md  test-runner.md
.cursor/rules/: documentation.md  testing.md
.cursor/skills/audit-workflow/: SKILL.md
.cursor/skills/code-quality-standards/: SKILL.md
.cursor/skills/review-workflow/: SKILL.md
.cursor/skills/security-guidelines/: SKILL.md
.cursor/skills/task-management/: SKILL.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260402_uute_file_category.py  20260403_file_category_uppercase_bc.py  20260403_uute_rename_order_type_value_to_custom.py  20260407_uute_waiting_client_info_email_enum.py  20260411_uute_add_object_city.py  20260412_uute_add_calculator_configs.py  20260416_uute_final_payment_rso_feedback.py  20260416_uute_rso_remarks_status.py  20260416_uute_signed_contract_enums.py  20260416_uute_tu_parsed_notification_enum.py  20260420_uute_merge_advance_payment_heads.py  20260421_uute_file_category_lowercase_missing_params.py  20260422_uute_add_listing_indexes.py  20260422_uute_drop_legacy_order_statuses.py  20260428_uute_completion_act_category.py  87fcef6f52ff_20260415_uute_advance_payment_model.py  8867df9549c4_add_order_type_and_survey_data.py
backend/app/: main.py  post_project_state.py
backend/app/api/: admin.py  calculator_config.py  emails.py  landing.py  orders.py  parsing.py  pipeline.py  scheme_generator.py
backend/app/core/: auth.py  celery_app.py  config.py  database.py
backend/app/models/: __init__.py  models.py
backend/app/repositories/: __init__.py  order_jsonb.py
backend/app/schemas/: __init__.py  schemas.py  scheme.py
backend/app/schemas/jsonb/: __init__.py  company.py  survey.py  tu.py
backend/app/services/: __init__.py  calculator_config_service.py  company_parser.py  contract_generator.py  cover_letter.py  email_service.py  order_service.py  param_labels.py  scheme_gost_frame.py  scheme_pdf_renderer.py  scheme_service.py  scheme_svg_elements.py  scheme_svg_renderer.py  scheme_template_renderer.py  tasks.py  tu_parser.py  tu_schema.py
backend/app/services/contract/: __init__.py  completion_act.py  contract_docx.py  docx_utils.py  invoice.py  number_format.py  tu_embed.py
backend/app/services/email/: __init__.py  idempotency.py  manual_send.py  renderers.py  service.py  smtp.py
backend/app/services/tasks/: __init__.py  _common.py  client_response.py  contract_flow.py  post_project_flow.py  reminders.py  tu_parsing.py
backend/calculator_templates/: cities_from_table1.md  esko_terra.json  spt941.json  tv7.json
backend/static/: admin.html  payment.html  upload.html
backend/static/css/: admin.css  upload.css
backend/static/js/admin/: admin.js  config.js  utils.js  views-calc.js  views-parsed.js
backend/static/js/upload/: config.js  contract.js  scheme.js  survey.js  upload.js  utils.js
backend/templates/emails/: advance_received.html  client_documents_received.html  contract_delivery.html  error_notification.html  final_payment_received.html  final_payment_request.html  info_request.html  new_order_notification.html  partnership_request.html  project_delivery.html  project_ready_payment.html  reminder.html  sample_delivery.html  survey_reminder.html  tu_parsed_notification.html
backend/templates/samples/: README.md
backend/templates/scheme_pdf/: gost_frame_a3.html  gost_frame_a4.html
backend/templates/schemes/dxf/: 1_2_dep_simple.dxf
backend/tests/: test_admin_post_project_actions.py  test_async_sync_boundary.py  test_celery_hardening.py  test_celery_tasks_package.py  test_file_category_b2.py  test_jsonb_schemas.py  test_order_response_typing.py  test_order_status_legacy_cleanup.py  test_post_project_status.py  test_rso_status_migration.py  test_scheme_auto_generation.py  test_scheme_template_renderer.py  test_tu_parsed_engineer_notification.py
docs/: backlog.md  calculator-config-design.md  changelog.md  kontrakt_ukute_template (2).md  kontrakt_ukute_template.md  payment-advance-tasktracker.md  project.md  scheme-generator-roadmap.md  scheme-implementation-notes.md  smart-survey-tasktracker.md  tasktracker.md  two-option-order-tasktracker.md
docs/archive/2026-Q2/: payment-advance-tasktracker.md  plan-unified-upload-contract.md  smart-survey-tasktracker.md  tasktracker-soprovod.md  tasktrecker-otchet-parsing.md  tasktrecker-progrssbar.md  two-option-order-tasktracker.md
docs/plans/: 2026-04-16-rso-remarks-status-loop.md  2026-04-20-audit-section-3-maintainability-roadmap.md  2026-04-25-dxf-scheme-template-plan.md
docs/scheme/: 1_2_Сх_зависимая без ГВС без клапана коррект .dwg  1_2_Сх_зависимая без ГВС без клапана коррект .tiff  1_2_Сх_зависимая без ГВС без клапана.dxf
docs/superpowers/plans/: 2026-04-14-privacy-policy-modal.md
docs/superpowers/specs/: 2026-04-10-custom-optional-docs-design.md  2026-04-23-scheme-generator-admin-integration-design.md
docs/templates/client-survey-excel/: README.md  uute_client_survey_sheet1.csv  uute_client_survey_sheet2_mapping.csv
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  index.css
frontend/src/api/: README.md  openapi.json  types.ts
frontend/src/components/: CalculatorSection.tsx  EmailModal.tsx  FAQSection.tsx  (+10 more)
scripts/: generate-api-types.sh  split_tasks_d1b.py
Лэндинг/: vite.config.ts
Лэндинг/src/: index.css
Модуль 1 (парсинг ТУ)/: README.md  tu_schema.py
Схема БД/: .env.example  alembic.ini  config.py  docker-compose.yml  order_service.py  orders.py  pipeline.py  schemas.py
ядро модуля/: base.html  celery_app.py  project_delivery.html
(+23 files in other folders)
